--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppMaps"
         tools:targetApi="31">
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}"/>
+            android:value="AIzaSyCfO_NfjYEYooujqJfoRfwhRwLQsPbFEzw"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
