--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCfO_NfjYEYooujqJfoRfwhRwLQsPbFEzw" />
+            android:value="${MAPS_API_KEY}"/>
 
         <activity
             android:name=".Map"
